@@ -6,6 +6,8 @@ Changes/improvements:
 - #266: Improve output when deploying PHP CGI config
 - #200: Abstract version control-specific details
 - #280: Don't rely on on $_ENV; use getenv() instead
+- #281: Switching of local SVN checkouts fails if existing working copy is a
+  subdirectory of trunk
 
 Bugs fixed:
 - #268: Issues with versions of SVN less than 1.5
